--- a/example/src/views/components/navbar.twig
+++ b/example/src/views/components/navbar.twig
@@ -1,7 +1,12 @@
+{% set nav = navbar | default({}) %}
+{% set brand = nav.brand | default({}) %}
+{% set links = nav.links | default([]) %}
+{% set buttons = nav.buttons | default([]) %}
+
 <nav class="navbar is-fixed-top is-light" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="/views/index.twig">
-      vite-twig-ssr
+    <a class="navbar-item" href="{{ brand.href|default('/views/index.twig')|e }}">
+      {{ brand.label|default('Home')|e }}
     </a>
 
     <a
@@ -20,16 +25,21 @@
 
   <div id="navbarMain" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="/views/index.twig">Home</a>
-      <a class="navbar-item" href="/views/about.twig">About</a>
+      {% for link in links %}
+        <a class="navbar-item" href="{{ link.href|e }}"{% if link.target %} target="{{ link.target|e }}"{% endif %}{% if link.rel %} rel="{{ link.rel|e }}"{% endif %}>{{ link.label|e }}</a>
+      {% endfor %}
     </div>
 
     <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-primary" href="https://github.com/trevorpao/vite-twig-ssr" target="_blank" rel="noreferrer">GitHub</a>
+      {% if buttons|length %}
+        <div class="navbar-item">
+          <div class="buttons">
+            {% for btn in buttons %}
+              <a class="button {{ btn.kind|default('is-light')|e }}" href="{{ btn.href|e }}"{% if btn.target %} target="{{ btn.target|e }}"{% endif %}{% if btn.rel %} rel="{{ btn.rel|e }}"{% endif %}>{{ btn.label|e }}</a>
+            {% endfor %}
+          </div>
         </div>
-      </div>
+      {% endif %}
     </div>
   </div>
 </nav>
